--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,6 +72,14 @@ input, select, textarea {
 	appearance: none;
 }
 
+/* Header */
+
+	#header .logo img {
+    	width: 100px; /* Adjust size as needed */
+    	height: auto; /* Keeps the aspect ratio */
+    	margin-right: 10px; /* Adds space between the logo and the text */
+	}
+
 /* Basic */
 
 	@-ms-viewport {
