--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2246,78 +2246,74 @@ input, select, textarea {
 			}
 
 /* Form */
+form {
+    margin: 0 0 2rem 0;
+}
 
-	form {
-		margin: 0 0 2rem 0;
-	}
+form > :last-child {
+    margin-bottom: 0;
+}
 
-		form > :last-child {
-			margin-bottom: 0;
-		}
+form > .fields {
+    display: flex;
+    flex-wrap: wrap;
+    width: calc(100% + 3rem);
+    margin: -1.5rem 0 2rem -1.5rem;
+}
 
-		form > .fields {
-			display: -moz-flex;
-			display: -webkit-flex;
-			display: -ms-flex;
-			display: flex;
-			-moz-flex-wrap: wrap;
-			-webkit-flex-wrap: wrap;
-			-ms-flex-wrap: wrap;
-			flex-wrap: wrap;
-			width: calc(100% + 3rem);
-			margin: -1.5rem 0 2rem -1.5rem;
-		}
+form > .fields > .field {
+    flex-grow: 0;
+    flex-shrink: 0;
+    padding: 1.5rem 0 0 1.5rem;
+    width: calc(100% - 1.5rem);
+}
 
-			form > .fields > .field {
-				-moz-flex-grow: 0;
-				-webkit-flex-grow: 0;
-				-ms-flex-grow: 0;
-				flex-grow: 0;
-				-moz-flex-shrink: 0;
-				-webkit-flex-shrink: 0;
-				-ms-flex-shrink: 0;
-				flex-shrink: 0;
-				padding: 1.5rem 0 0 1.5rem;
-				width: calc(100% - 1.5rem);
-			}
+form > .fields > .field.half {
+    width: calc(50% - 0.75rem);
+}
 
-				form > .fields > .field.half {
-					width: calc(50% - 0.75rem);
-				}
+form > .fields > .field.third {
+    width: calc(100%/3 - 0.5rem);
+}
 
-				form > .fields > .field.third {
-					width: calc(100%/3 - 0.5rem);
-				}
+form > .fields > .field.quarter {
+    width: calc(25% - 0.375rem);
+}
 
-				form > .fields > .field.quarter {
-					width: calc(25% - 0.375rem);
-				}
+/* Responsive Adjustments */
+@media screen and (max-width: 480px) {
+    form > .fields {
+        width: calc(100% + 3rem);
+        margin: -1.5rem 0 2rem -1.5rem;
+    }
 
-		@media screen and (max-width: 480px) {
+    form > .fields > .field {
+        padding: 1.5rem 0 0 1.5rem;
+        width: calc(100% - 1.5rem);
+    }
 
-			form > .fields {
-				width: calc(100% + 3rem);
-				margin: -1.5rem 0 2rem -1.5rem;
-			}
+    form > .fields > .field.half,
+    form > .fields > .field.third,
+    form > .fields > .field.quarter {
+        width: calc(100% - 1.5rem);
+    }
+}
 
-				form > .fields > .field {
-					padding: 1.5rem 0 0 1.5rem;
-					width: calc(100% - 1.5rem);
-				}
+/* Center the submit button */
+.actions {
+    display: flex;
+    justify-content: center;
+}
 
-					form > .fields > .field.half {
-						width: calc(100% - 1.5rem);
-					}
+.actions input[type="submit"] {
+    max-width: 300px; /* Optional: Set a max width */
+}
 
-					form > .fields > .field.third {
-						width: calc(100% - 1.5rem);
-					}
-
-					form > .fields > .field.quarter {
-						width: calc(100% - 1.5rem);
-					}
-
-		}
+.g-recaptcha {
+    margin-bottom: 40px; /* Adjust the value as needed */
+    display: flex;
+    justify-content: center;
+}
 
 	label {
 		display: block;
