--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2310,9 +2310,13 @@ form > .fields > .field.quarter {
 }
 
 .g-recaptcha {
-    margin-bottom: 40px; /* Adjust the value as needed */
+    margin-bottom: 35px; /* Adjust the value as needed */
     display: flex;
     justify-content: center;
+}
+
+.centered-heading {
+    text-align: center;
 }
 
 	label {
@@ -2803,40 +2807,49 @@ form > .fields > .field.quarter {
 		}
 
 /* Icons */
+ul.icons {
+    cursor: default;
+    list-style: none;
+    padding-left: 0;
+}
 
-	ul.icons {
-		cursor: default;
-		list-style: none;
-		padding-left: 0;
-	}
+ul.icons li {
+    display: inline-block;
+    padding: 0 0.5rem 0 0;
+    vertical-align: middle;
+}
 
-		ul.icons li {
-			display: inline-block;
-			padding: 0 0.5rem 0 0;
-			vertical-align: middle;
-		}
+ul.icons li:last-child {
+    padding-right: 0;
+}
 
-			ul.icons li:last-child {
-				padding-right: 0;
-			}
+ul.icons li .icon:before {
+    width: 2.25rem;
+    height: 2.25rem;
+    line-height: 2.25rem;
+    display: inline-block;
+    text-align: center;
+    border-radius: 100%;
+    font-size: 1.25rem;
+}
 
-			ul.icons li .icon:before {
-				width: 2.25rem;
-				height: 2.25rem;
-				line-height: 2.25rem;
-				display: inline-block;
-				text-align: center;
-				border-radius: 100%;
-				font-size: 1.25rem;
-			}
+ul.icons.alt li .icon:before {
+    -moz-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+    -webkit-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+    -ms-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+    transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+    font-size: 1rem;
+}
 
-		ul.icons.alt li .icon:before {
-			-moz-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-			-webkit-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-			-ms-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-			transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-			font-size: 1rem;
-		}
+/* Centering the icons specifically */
+.split.contact .icons {
+    display: flex;
+    justify-content: center;
+}
+
+.split.contact .icons li {
+    margin: 0 10px;
+}
 
 /* List */
 
@@ -4222,77 +4235,57 @@ form > .fields > .field.quarter {
 				padding: 0;
 			}
 
-				#footer > section.split > section {
-					padding: 3rem 4rem 1rem 4rem ;
-					border-top: solid 2px #e2e2e2;
-				}
+			/* Existing styles */
+			#footer>section.split.contact>section {
+				display: flex;
+				align-items: center;
+				padding: 3.15rem 4rem;
+			}
 
-					#footer > section.split > section:first-child {
-						padding: 5rem 4rem 1rem 4rem ;
-						border-top: 0;
-					}
+			#footer>section.split.contact>section>* {
+				margin-bottom: 0;
+			}
 
-					#footer > section.split > section:last-child {
-						padding: 3rem 4rem 3rem 4rem ;
-					}
+			#footer>section.split.contact>section> :first-child {
+				flex-shrink: 0;
+				flex-grow: 0;
+				width: 6rem;
+			}
 
-				#footer > section.split.contact > section {
-					display: -moz-flex;
-					display: -webkit-flex;
-					display: -ms-flex;
-					display: flex;
-					-moz-align-items: center;
-					-webkit-align-items: center;
-					-ms-align-items: center;
-					align-items: center;
-					padding: 3.15rem 4rem;
-				}
+			#footer>section.split.contact>section> :last-child {
+				flex-shrink: 1;
+				flex-grow: 1;
+			}
 
-					#footer > section.split.contact > section > * {
-						margin-bottom: 0;
-					}
+			#footer>section.split.contact>section:first-child {
+				padding: 4rem 4rem 3rem 4rem;
+			}
 
-					#footer > section.split.contact > section > :first-child {
-						-moz-flex-shrink: 0;
-						-webkit-flex-shrink: 0;
-						-ms-flex-shrink: 0;
-						flex-shrink: 0;
-						-moz-flex-grow: 0;
-						-webkit-flex-grow: 0;
-						-ms-flex-grow: 0;
-						flex-grow: 0;
-						width: 6rem;
-					}
+			#footer>section.split.contact>section:last-child {
+				padding: 3rem 4rem 4rem 4rem;
+			}
 
-					#footer > section.split.contact > section > :last-child {
-						-moz-flex-shrink: 1;
-						-webkit-flex-shrink: 1;
-						-ms-flex-shrink: 1;
-						flex-shrink: 1;
-						-moz-flex-grow: 1;
-						-webkit-flex-grow: 1;
-						-ms-flex-grow: 1;
-						flex-grow: 1;
-					}
+			#footer>section.split.contact>section.alt {
+				align-items: flex-start;
+			}
 
-					#footer > section.split.contact > section:first-child {
-						padding: 4rem 4rem 3rem 4rem;
-					}
+			#footer>section.split.contact>section.alt> :last-child {
+				margin-top: -0.325rem;
+			}
 
-					#footer > section.split.contact > section:last-child {
-						padding: 3rem 4rem 4rem 4rem;
-					}
+			/* New styles for centering */
+			.split.contact section p,
+			.split.contact section a {
+				text-align: center;
+				display: block;
+				text-decoration: none;
+				border: none;
+			}
 
-					#footer > section.split.contact > section.alt {
-						-moz-align-items: -moz-flex-start;
-						-webkit-align-items: -webkit-flex-start;
-						-ms-align-items: -ms-flex-start;
-						align-items: flex-start;
-					}
-
-						#footer > section.split.contact > section.alt > :last-child {
-							margin-top: -0.325rem;
-						}
+			/* Add hover effect */
+			.split.contact section a:hover {
+				text-decoration: underline;
+			}
 
 		#footer form label,
 		#footer h3,
