--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2266,6 +2266,7 @@ form > .fields > .field {
     flex-shrink: 0;
     padding: 1.5rem 0 0 1.5rem;
     width: calc(100% - 1.5rem);
+    text-align: left; /* Ensure text is left-aligned */
 }
 
 form > .fields > .field.half {
@@ -2273,7 +2274,7 @@ form > .fields > .field.half {
 }
 
 form > .fields > .field.third {
-    width: calc(100%/3 - 0.5rem);
+    width: calc(100% / 3 - 0.5rem);
 }
 
 form > .fields > .field.quarter {
@@ -2290,6 +2291,7 @@ form > .fields > .field.quarter {
     form > .fields > .field {
         padding: 1.5rem 0 0 1.5rem;
         width: calc(100% - 1.5rem);
+        text-align: left; /* Ensure text is left-aligned for smaller screens */
     }
 
     form > .fields > .field.half,
@@ -3191,12 +3193,8 @@ ul.icons.alt li .icon:before {
 @media screen and (max-width: 980px) {
     .pagination a, .pagination span {
         font-size: 0.9rem;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    .pagination .page, .pagination .extra {
-        display: none;
+        display: inline-block; /* Ensure elements display properly on mobile */
+        padding: 0.5rem; /* Adjust padding for mobile */
     }
 }
 
@@ -3787,196 +3785,133 @@ ul.icons.alt li .icon:before {
 		}
 
 /* Main */
+#main {
+    background-color: #ffffff;
+    position: relative;
+    margin: 0 auto;
+    width: calc(100% - 4rem);
+    max-width: 72rem;
+    z-index: 2;
+}
 
-	#main {
-		background-color: #ffffff;
-		position: relative;
-		margin: 0 auto;
-		width: calc(100% - 4rem);
-		max-width: 72rem;
-		z-index: 2;
-	}
+#main > * {
+    padding: 4rem 4rem 2rem 4rem;
+    border-top: solid 2px #eeeeee;
+    margin: 0;
+}
 
-		#main > * {
-			padding: 4rem 4rem 2rem 4rem ;
-			border-top: solid 2px #eeeeee;
-			margin: 0;
-		}
+#main > *:first-child {
+    border-top: 0;
+}
 
-			#main > *:first-child {
-				border-top: 0;
-			}
+#main > footer {
+    text-align: center;
+}
 
-		#main > footer {
-			text-align: center;
-		}
+#main > .post {
+    padding: 8rem 8rem 6rem 8rem;
+}
 
-		#main > .post {
-			padding: 8rem 8rem 6rem 8rem ;
-		}
+#main > .post header.major > .date {
+    margin-top: -2rem;
+}
 
-			#main > .post header.major > .date {
-				margin-top: -2rem;
-			}
+#main > .post header.major > h1,
+#main > .post header.major h2 {
+    font-size: 4rem;
+    line-height: 1.1;
+    margin: 0 0 2rem 0;
+}
 
-			#main > .post header.major > h1, #main > .post header.major h2 {
-				font-size: 4rem;
-				line-height: 1.1;
-				margin: 0 0 2rem 0;
-			}
+#main > .post.featured {
+    text-align: center;
+}
 
-			#main > .post.featured {
-				text-align: center;
-			}
+/* Responsive Adjustments */
+@media screen and (max-width: 1280px) {
+    #main > .post {
+        padding: 6rem 4rem 4rem 4rem;
+    }
+}
 
-			@media screen and (max-width: 1280px) {
+@media screen and (max-width: 736px) {
+    #main > .post {
+        padding: 4rem 2rem 2rem 2rem;
+    }
 
-				#main > .post {
-					padding: 6rem 4rem 4rem 4rem ;
-				}
+    #main > .post header.major > .date {
+        margin-top: -1rem;
+        margin-bottom: 2rem;
+    }
 
-			}
+    #main > .post header.major > h1,
+    #main > .post header.major h2 {
+        font-size: 2.5rem;
+        line-height: 1.2;
+        margin: 0 0 1.5rem 0;
+    }
+}
 
-			@media screen and (max-width: 736px) {
+/* Posts Container */
+#main > #posts-container .posts {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: stretch;
+    text-align: center;
+    width: 100%;
+    padding: 0;
+    box-sizing: border-box; /* Ensure padding and borders are included in the element's total width and height */
+}
 
-				#main > .post {
-					padding: 4rem 2rem 2rem 2rem ;
-				}
+#main > #posts-container .posts > article {
+    flex: 0 0 calc(50% - 2rem); /* Adjust width and margin */
+    margin: 1rem; /* Adjust margin */
+    padding: 2rem;
+    border: 1px solid #eeeeee;
+    border-radius: 5px;
+    box-sizing: border-box; /* Ensure padding and borders are included in the element's total width and height */
+    text-align: center;
+}
 
-					#main > .post header.major > .date {
-						margin-top: -1rem;
-						margin-bottom: 2rem;
-					}
+#main > #posts-container .posts > article > :last-child {
+    margin-bottom: 0;
+}
 
-					#main > .post header.major > h1, #main > .post header.major h2 {
-						font-size: 2.5rem;
-						line-height: 1.2;
-						margin: 0 0 1.5rem 0;
-					}
+/* Responsive Adjustments */
+@media screen and (max-width: 980px) {
+    #main > #posts-container .posts > article {
+        flex: 0 0 calc(50% - 2rem);
+        margin: 1rem;
+        padding: 2.5rem;
+    }
+}
 
-			}
+@media screen and (max-width: 736px) {
+    #main > #posts-container .posts > article {
+        flex: 0 0 calc(100% - 2rem);
+        margin: 1rem 0;
+        padding: 2rem;
+    }
 
-		#main > .posts {
-			display: -moz-flex;
-			display: -webkit-flex;
-			display: -ms-flex;
-			display: flex;
-			-moz-flex-wrap: wrap;
-			-webkit-flex-wrap: wrap;
-			-ms-flex-wrap: wrap;
-			flex-wrap: wrap;
-			-moz-align-items: -moz-stretch;
-			-webkit-align-items: -webkit-stretch;
-			-ms-align-items: -ms-stretch;
-			align-items: stretch;
-			text-align: center;
-			width: 100%;
-			padding: 0;
-		}
+    #main > #posts-container .posts > article .image {
+        max-width: 25rem;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
 
-			#main > .posts > * {
-				-moz-flex-shrink: 1;
-				-webkit-flex-shrink: 1;
-				-ms-flex-shrink: 1;
-				flex-shrink: 1;
-				-moz-flex-grow: 0;
-				-webkit-flex-grow: 0;
-				-ms-flex-grow: 0;
-				flex-grow: 0;
-			}
+@media screen and (max-width: 736px) {
+    #main > * {
+        padding: 2rem 2rem 0.1rem 2rem;
+    }
+}
 
-			#main > .posts > * {
-				width: 50%;
-			}
-
-			#main > .posts > * {
-				padding: 4rem;
-				width: 50%;
-			}
-
-			#main > .posts > article {
-				border-color: #eeeeee;
-				border-left-width: 2px;
-				border-style: solid;
-				border-top-width: 2px;
-				text-align: center;
-			}
-
-				#main > .posts > article > :last-child {
-					margin-bottom: 0;
-				}
-
-				#main > .posts > article:nth-child(2n - 1) {
-					border-left-width: 0;
-				}
-
-				#main > .posts > article:nth-child(-n + 2) {
-					border-top-width: 0;
-				}
-
-			@media screen and (max-width: 980px) {
-
-				#main > .posts > * {
-					width: 50%;
-				}
-
-				#main > .posts > * {
-					padding: 2.5rem;
-					width: 50%;
-				}
-
-			}
-
-			@media screen and (max-width: 736px) {
-
-				#main > .posts > * {
-					width: 100%;
-				}
-
-				#main > .posts > * {
-					padding: 2rem;
-					width: 100%;
-				}
-
-				#main > .posts > article:nth-child(2n - 1) {
-					border-left-width: 2px;
-				}
-
-				#main > .posts > article:nth-child(-n + 2) {
-					border-top-width: 2px;
-				}
-
-				#main > .posts > article:nth-child(n) {
-					border-left-width: 0;
-				}
-
-				#main > .posts > article:nth-child(-n + 1) {
-					border-top-width: 0;
-				}
-
-				#main > .posts > article .image {
-					max-width: 25rem;
-					margin-left: auto;
-					margin-right: auto;
-				}
-
-			}
-
-		@media screen and (max-width: 736px) {
-
-			#main > * {
-				padding: 2rem 2rem 0.1rem 2rem ;
-			}
-
-		}
-
-		@media screen and (max-width: 480px) {
-
-			#main {
-				width: 100%;
-			}
-
-		}
+@media screen and (max-width: 480px) {
+    #main {
+        width: 100%;
+    }
+}
 
 /* Footer */
 
