--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4423,8 +4423,8 @@ ul.icons.alt li .icon:before {
 			#copyright {
 				display: inline-block; /* Ensure it shrinks to fit content */
 				width: 100%; /* Full width */
-				padding-top: 0.9rem;
-				padding-bottom: 0.9rem;
+				padding-top: 1.8rem;
+				padding-bottom: 1.8rem;
 				white-space: nowrap; /* Prevent line breaks */
 				overflow: hidden; /* Hide overflow */
 				text-overflow: ellipsis; /* Add ellipsis for overflow text */
@@ -4640,19 +4640,19 @@ ul.icons.alt li .icon:before {
 	}
 
 	/* TEST-SUBHEADING on index.html */
-	.subheading p {
+	#custom-subheading p {
 		margin: 0; /* Remove default margin */
 		font-size: 14px; /* Adjust font size as needed */
-		margin-bottom: 0px; /* Adjust to reduce gap */
+		line-height: 1.2; /* Adjust line height */
+		padding: 0; /* Remove padding */
+		margin-top: 5px;
 	}
 	
-	.subheading h2 {
+	#custom-subheading h2 {
 		margin: 0; /* Remove default margin */
-		font-size: 24px; /* Adjust font size as needed */
-		margin-top: 0px; /* Adjust to reduce gap */
-	}	
-	
-	/* Add a small margin between the p and h2 if needed */
-	.subheading p + .subheading h2 {
-		margin-top: 0px; /* Adjust as needed */
+		font-size: 28px; /* Adjust font size as needed */
+		line-height: 1.2; /* Adjust line height */
+		padding: 0; /* Remove padding */
+		margin-top: 5px; /* Add small margin if needed */
+		margin-bottom: 50px;
 	}
