--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2714,7 +2714,8 @@ form > .fields > .field.quarter {
 		}
 
 			ul.actions.special li:first-child {
-				padding-left: 0;
+				padding-left: 1rem;
+				padding-right: 1rem;
 			}
 
 		ul.actions.stacked {
