--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -213,6 +213,7 @@ input, select, textarea {
 		font-size: 1.75rem;
 		line-height: 1.3;
 		margin: 0 0 1.5rem 0;
+		margin-top: 1.5rem;
 	}
 
 	h3 {
