Added allignment to h2 + p, added images, reordered text on about.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2973,6 +2973,7 @@ ul.icons.alt li .icon:before {
 		header > h2 + p {
 			font-size: 1rem;
 			margin-top: -0.75rem;
+			text-align: center;
 		}
 
 		header > h3 + p {
